Created attachment 125984 [details] docx1
Created attachment 125995 [details] Screenshot of supposed bug
When I open this document, the part of the line just underneath the logo in the header appears lower than the rest of the line (see my screenshot). Is this the malformation you mean? It is important to describe these things in great detail in your bug reports. Always describe the exact problem, as well as what you think it is supposed to look like. Otherwise it may not be clear what the exact bug is. Thanks.
Yes that's the bug, thanks for clarifying
Could someone check whether this document displays correctly in MS Word? It is does, this is a LO bug. If it looks the same in Word, this is not a bug. Thanks.
I can't check unfortunately.
(In reply to ekari from comment #5) > I can't check unfortunately. Hello, Maybe somebody else can check it. We need to make sure that this problem is specific to LibreOffice. If it appears in Word as well, it may not be a bug. It could be that the person who created the document didn't do a good job with the formatting.
Summary/description of this bug: 1) Open this document 2) The part of the line just underneath the logo in the header appears lower than the rest of the line (see screenshot). This document displays properly in MS Word.
Repro with 4.0.0.3 and LibreOffice 3.3.0
Moving to NEW as per comment 8
** Please read this message in its entirety before responding ** To make sure we're focusing on the bugs that affect our users today, LibreOffice QA is asking bug reporters and confirmers to retest open, confirmed bugs which have not been touched for over a year. There have been thousands of bug fixes and commits since anyone checked on this bug report. During that time, it's possible that the bug has been fixed, or the details of the problem have changed. We'd really appreciate your help in getting confirmation that the bug is still present. If you have time, please do the following: Test to see if the bug is still present with the latest version of LibreOffice from https://www.libreoffice.org/download/ If the bug is present, please leave a comment that includes the information from Help - About LibreOffice. If the bug is NOT present, please set the bug's Status field to RESOLVED-WORKSFORME and leave a comment that includes the information from Help - About LibreOffice. Please DO NOT Update the version field Reply via email (please reply directly on the bug tracker) Set the bug's Status field to RESOLVED - FIXED (this status has a particular meaning that is not appropriate in this case) If you want to do more to help you can test to see if your issue is a REGRESSION. To do so: 1. Download and install oldest version of LibreOffice (usually 3.3 unless your bug pertains to a feature added after 3.3) from http://downloadarchive.documentfoundation.org/libreoffice/old/ 2. Test your bug 3. Leave a comment with your results. 4a. If the bug was present with 3.3 - set version to 'inherited from OOo'; 4b. If the bug was not present in 3.3 - add 'regression' to keyword Feel free to come ask questions or to say hello in our QA chat: https://kiwiirc.com/nextclient/irc.freenode.net/#libreoffice-qa Thank you for helping us make LibreOffice even better for everyone! Warm Regards, QA Team MassPing-UntouchedBug
Still reproducible in Version: 6.4.0.0.alpha0+ Build ID: ea19b0c0230fcc730245ecd445c03164cb6a1d18 CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US Calc: threaded
Created attachment 169423 [details] Screenshot of the original document side by side in Word and Writer Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community Build ID: 318d384c596c1593667d6c936f55bf6ebd0c5db6 CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win Locale: en-US (hu_HU); UI: en-GB Calc: CL The image is wrapped in Word as "the same line with text" (in Writer this is imported as anchor as character). The line below it is a sequence of underscores without spaces. Thus it is considered as one word when it comes to wrapping the image. Word seems to wrap the long word into the next line if it would not fit in the same line with the image. Writer just breaks the long word at the end of the same line as the image is.
Created attachment 169424 [details] Minimized example file Minimized example shows the behavior is the same in the document body as well. Also the difference between a long word (sequence of underscores) not fitting in one line with the image vs the behavior when it just fits.
Created attachment 169425 [details] Screenshot of the minimized example side by side in Word and Writer
Attila Bakos (NISZ) committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/41b012767feb8552b60a68c7be18d80c403304bf tdf#100680 sw DOCX compatibility: fix wrap of as_char flys It will be available in 7.4.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Verified in: Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community Build ID: 83d0f2eebae41d431d9a5bfd1a918523977752d0 CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win Locale: hu-HU (hu_HU); UI: en-US Calc: CL