tdf#100680 Sw docx compatibility: Fix wrap of as_char flys

New compat-flag has been introduced which true in case of
docx documents, and modifies the wrapping of long words
with as_char anchored flys anchored into the same line,
like Word does.
Note: test is missing

Change-Id: I9474900ef778bcf5ddc9d95f39d536d67015f3b2